--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drag-drop-demo",
+  "name": "benefactor-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "highlight.js": "^9.13.1",
     "marked": "^0.5.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
