--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "highlight.js": "^9.13.1",
+    "lodash": "^4.17.11",
     "marked": "^0.5.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
