--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.6.3",
     "react-beautiful-dnd": "^10.0.1",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.8.1",
     "react-portal": "^4.2.0",
     "react-scripts": "2.1.1"
   },
