--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "highlight.js": "^9.13.1",
     "lodash": "^4.17.11",
     "marked": "^0.5.2",
+    "natural-drag-animation-rbdnd": "^2.0.0",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-beautiful-dnd": "^10.0.1",
