Add a git pull to checkout

--- a/ops.yaml
+++ b/ops.yaml
@@ -6,6 +6,7 @@ vars:
 cmds:
   checkout:
     - cmd: git checkout {commit}
+    - cmd: git pull
   build:
     - cmd: docker build -t {name} .
   clean:
