--- a/ops.yaml
+++ b/ops.yaml
@@ -7,8 +7,10 @@ cmds:
   checkout:
     - cmd: git checkout {commit}
     - cmd: git pull
+  version:
+    - cmd: docker inspect {name} --format '\{\{ index .Config.Labels.git_commit \}\}'
   build:
-    - cmd: docker build -t {name} .
+    - cmd: docker build -t {name} --build-arg GIT_COMMIT=$(git log -1 --format=%h) .
   clean:
     - steps: [stop]
     - cmd: docker image rm {name}
