--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-beautiful-dnd": "^10.0.1",
     "react-dom": "^16.6.3",
     "react-modal": "^3.8.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
