--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "highlight.js": "^9.13.1",
     "lodash": "^4.17.11",
     "marked": "^0.5.2",
+    "moment": "^2.24.0",
     "natural-drag-animation-rbdnd": "^2.0.0",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
@@ -18,7 +19,8 @@
     "react-dom": "^16.6.3",
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-textarea-autosize": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
