--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-textarea-autosize": "^7.1.0"
+    "react-textarea-autosize": "^7.1.0",
+    "webpack-dev-server": "3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
