--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-textarea-autosize": "^7.1.0",
-    "webpack-dev-server": "3.1.11"
+    "react-textarea-autosize": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +38,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.5.0"
+    "@fortawesome/fontawesome-free": "^5.5.0",
+    "webpack-dev-server": "3.1.11"
   }
 }
