--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.5.0",
-    "webpack-dev-server": "3.1.11"
+    "@fortawesome/fontawesome-free": "^5.5.0"
   }
 }
