--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "highlight.js": "^9.13.1",
+    "highlight.js": "=9.14.2",
     "lodash": "^4.17.11",
     "marked": "^0.5.2",
     "moment": "^2.24.0",
