--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "highlight.js": "=9.14.2",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
     "marked": "^0.5.2",
     "moment": "^2.24.0",
