--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-modal": "^3.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "react-textarea-autosize": "^7.1.0"
+    "react-textarea-autosize": "^7.1.0",
+    "react-toastify": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
