--- a/ops.yaml
+++ b/ops.yaml
@@ -11,6 +11,7 @@ cmds:
     - cmd: docker inspect {name} --format '\{\{ index .Config.Labels.git_commit \}\}'
   build:
     - cmd: docker build --no-cache -t {name} --build-arg GIT_COMMIT=$(git log -1 --format=%h) .
+    - cmd: docker image prune -f
   clean:
     - steps: [stop]
     - cmd: docker image rm {name}
