--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@types/jest": "^24.0.13",
+    "@types/js-cookie": "^2.2.2",
+    "@types/node": "^12.0.2",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "awesome-typescript-loader": "^5.2.1",
     "highlight.js": "=9.14.2",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.11",
@@ -22,7 +29,8 @@
     "react-scripts": "2.1.8",
     "react-textarea-autosize": "^7.1.0",
     "react-toastify": "^5.0.0",
-    "react-tooltip": "^3.10.0"
+    "react-tooltip": "^3.10.0",
+    "typescript": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
