--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@types/jest": "^24.0.13",
     "@types/js-cookie": "^2.2.2",
+    "@types/lodash": "^4.14.132",
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
