--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
+    "@types/react-modal": "^3.8.2",
     "@types/react-router-dom": "^4.3.3",
     "awesome-typescript-loader": "^5.2.1",
     "highlight.js": "=9.14.2",
