--- a/package.json
+++ b/package.json
@@ -3,28 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-brands-svg-icons": "^5.5.0",
-    "@fortawesome/free-regular-svg-icons": "^5.5.0",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "@types/jest": "^24.0.13",
-    "@types/js-cookie": "^2.2.2",
-    "@types/lodash": "^4.14.132",
-    "@types/node": "^12.0.2",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-modal": "^3.8.2",
-    "@types/react-router-dom": "^4.3.3",
-    "awesome-typescript-loader": "^5.2.1",
-    "fstream": "^1.0.12",
-    "handlebars": "4.1.2",
+    "@fortawesome/fontawesome-svg-core": "=1.2.15",
+    "@fortawesome/free-brands-svg-icons": "=5.7.2",
+    "@fortawesome/free-regular-svg-icons": "=5.7.2",
+    "@fortawesome/free-solid-svg-icons": "=5.7.2",
+    "@fortawesome/react-fontawesome": "=0.1.4",
+    "@types/jest": "=24.0.13",
+    "@types/js-cookie": "=2.2.2",
+    "@types/node": "=12.0.2",
+    "@types/react": "=16.8.18",
+    "@types/react-dom": "=16.8.4",
+    "@types/react-modal": "=3.8.2",
+    "@types/react-router-dom": "=4.3.3",
+    "awesome-typescript-loader": "=5.2.1",
+    "fstream": "=1.0.12",
+    "handlebars": "=4.1.2",
     "highlight.js": "=9.14.2",
-    "js-cookie": "^2.2.0",
-    "lodash": "^4.17.13",
-    "marked": "^0.6.1",
-    "moment": "^2.24.0",
-    "node-sass": "^4.10.0",
+    "js-cookie": "=2.2.0",
+    "marked": "=0.6.2",
+    "moment": "=2.24.0",
+    "node-sass": "=4.10.0",
     "querystringify": "^2.1.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
