--- a/ops.yaml
+++ b/ops.yaml
@@ -1,22 +1,29 @@
 name: frontend
 vars:
   default:
-    name: benefact_frontend
+    name: 0xfaff/benefact-frontend
     commit: develop
+    hash: $git rev-parse --short=8 HEAD
+    image: \{name}:{hash}
 cmds:
   checkout:
     - cmd: git checkout {commit}
     - cmd: git pull
   version:
-    - cmd: docker inspect {name} --format '\{\{ index .Config.Labels.git_commit \}\}'
+    - cmd: docker inspect {image} --format '\{\{ index .Config.Labels.git_commit \}\}'
   build:
-    - cmd: docker build -t {name} --build-arg GIT_COMMIT=$(git log -1 --format=%h) .
+    - cmd: git diff --exit-code
+    - cmd: docker build -t {image} --build-arg GIT_COMMIT={hash} .
+  push:
+    - cmd: docker push {image}
+  deploy:
+    - cmd: kubectl set image deployments/benefact-frontend benefact-frontend={image}
   clean:
     - steps: [stop]
-    - cmd: docker image rm {name}
+    - cmd: docker image rm {image}
   run:
-    - cmd: docker run -itd --name {name} {name}
-    - cmd: docker network connect --ip {ip} {network} {name}
+    - cmd: docker run -itd --name {image} {image}
+    - cmd: docker network connect --ip {ip} {network} {image}
   stop:
-    - cmd: docker stop {name}
-    - cmd: docker container rm {name}
+    - cmd: docker stop {image}
+    - cmd: docker container rm {image}
