--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "js-cookie": "=2.2.0",
     "marked": "=0.6.2",
     "moment": "=2.24.0",
-    "node-sass": "=4.10.0",
-    "querystringify": "^2.1.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-modal": "^3.8.1",
+    "node-sass": "=7.0.1",
+    "querystringify": "^2.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
-    "react-textarea-autosize": "^7.1.0",
-    "react-toastify": "^5.0.0",
-    "react-tooltip": "^3.10.0",
-    "typescript": "^3.4.5"
+    "react-scripts": "5.0.0",
+    "react-textarea-autosize": "^7.1.2",
+    "react-toastify": "^5.5.0",
+    "react-tooltip": "^3.11.6",
+    "typescript": "^3.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +49,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.5.0"
+    "@fortawesome/fontawesome-free": "^5.15.4"
+  },
+  "exports": {
+    "./": "./src"
   }
 }
