--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "baseUrl": "src",
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,7 +21,7 @@
     "jsx": "preserve"
   },
   "include": [
-    "src/*"
+    "src/**/*"
   ],
   "extends": "./tsconfig.paths.json"
 }
